Add max session validation; Add invitation pagination;
