# code/jvm/im-http-api/src/main/kotlin/im/api/model/output/users/UserCreationOutputModel.kt
@@ -1,0 +1,14 @@
+package im.api.model.output.users
+
+import im.domain.user.User
+
+class UserCreationOutputModel(
+    val id: Long,
+) {
+    companion object {
+        fun fromDomain(user: User): UserCreationOutputModel =
+            UserCreationOutputModel(
+                id = user.id.value,
+            )
+    }
+}
